--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "helmet": "^3.19.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.0",
+    "node-sass": "^4.12.0",
     "sqlite": "^3.0.3"
   }
 }
